@@ -1,3 +1,8 @@
+Sun Nov  2 18:27:01 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Options.java: new option
+	  --readonly-plt.
+
 Sun Oct 26 07:04:53 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* bin/cbc: resolve symbolic link to command file.
